--- a/src/app/component/cliente/cliente-create/cliente-create.component.html
+++ b/src/app/component/cliente/cliente-create/cliente-create.component.html
@@ -1,39 +1,63 @@
 <mat-card>
+  <mat-card-title>Novo Cliente</mat-card-title>
 
-    <mat-card-title>Novo Cliente</mat-card-title>
+  <form>
 
-<form>
-<mat-form-field appearance="outline">
+    <!-- Nome e CPF -->
+    <mat-form-field appearance="outline">
       <mat-label>Nome</mat-label>
-    <input matInput placeholder="" [(ngModel)]="cliente.cliNome" name="cliNome" required>
-</mat-form-field>
+      <input matInput [(ngModel)]="cliente.cliNome" name="cliNome" required>
+    </mat-form-field>
 
-<mat-form-field appearance="outline">
-      <mat-label>Gmail</mat-label>
-    <input matInput placeholder=" " [(ngModel)]="cliente.cliEmail" name="cliEmail" required>
-</mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>CPF</mat-label>
+      <input matInput [(ngModel)]="cliente.cliCpf" name="cliCpf" maxlength="14" required>
+    </mat-form-field>
 
-<mat-form-field appearance="outline">
-    <mat-label>Cpf</mat-label>
-    <input matInput placeholder="" [(ngModel)]="cliente.cliCpf" name="cliCpf"  maxlength="11" required>
-</mat-form-field>
+    <!-- Contato -->
+    <mat-form-field appearance="outline">
+      <mat-label>Celular</mat-label>
+      <input matInput [(ngModel)]="cliente.conCelular" name="conCelular" required>
+    </mat-form-field>
 
-<mat-form-field appearance="outline">
-      <mat-label>Telefone</mat-label>
-    <input matInput placeholder="" [(ngModel)]="cliente.cliTelefone" name="cliTelefone"  maxlength="11" required>
-</mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Telefone Comercial</mat-label>
+      <input matInput [(ngModel)]="cliente.conTelefoneComercial" name="conTelefoneComercial">
+    </mat-form-field>
 
-<mat-form-field appearance="outline">
-       <mat-label>Endereço</mat-label>
-    <input matInput placeholder="" [(ngModel)]="cliente.cliEndereco" name="cliEndereco" required>
-</mat-form-field>
-</form>
+    <mat-form-field appearance="outline">
+      <mat-label>Email</mat-label>
+      <input matInput [(ngModel)]="cliente.conEmail" name="conEmail" type="email" required>
+    </mat-form-field>
 
-<button mat-raised-button (click) = "createCliente()" color="primary">
-    Salvar
-</button>
+    <!-- Endereço -->
+    <mat-form-field appearance="outline">
+      <mat-label>Rua</mat-label>
+      <input matInput [(ngModel)]="cliente.endRua" name="endRua" required>
+    </mat-form-field>
 
-<button mat-raised-button (click)="cancel()">
-   Cancelar
-</button>
+    <mat-form-field appearance="outline">
+      <mat-label>Número</mat-label>
+      <input matInput [(ngModel)]="cliente.endNumero" name="endNumero" required>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Cidade</mat-label>
+      <input matInput [(ngModel)]="cliente.endCidade" name="endCidade" required>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>CEP</mat-label>
+      <input matInput [(ngModel)]="cliente.endCep" name="endCep" required>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Estado</mat-label>
+      <input matInput [(ngModel)]="cliente.endEstado" name="endEstado" required>
+    </mat-form-field>
+  </form>
+
+  <!-- Botões -->
+  <button mat-raised-button (click)="createCliente()" color="primary">Salvar</button>
+  <button mat-raised-button (click)="cancel()">Cancelar</button>
 </mat-card>
