--- a/src/app/component/cliente/cliente-delete/cliente-delete.component.html
+++ b/src/app/component/cliente/cliente-delete/cliente-delete.component.html
@@ -1,39 +1,36 @@
 <mat-card>
-    <mat-card-title>Excluir cliente</mat-card-title>
-    <form>
-        <mat-form-field appearance="outline">
-            <mat-label>Nome do Cliente*</mat-label >
-            <input matInput placeholder="" [value]="cliente.cliNome" name="cliNome" disabled>
-        </mat-form-field>
+  <mat-card-title>Excluir cliente</mat-card-title>
+  <form>
 
-        <mat-form-field appearance="outline">
-            <mat-label>Cpf*</mat-label>
-            <input matInput placeholder="" [value]="cliente.cliCpf" name="cliCpf" disabled>
-        </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Nome do Cliente*</mat-label>
+      <input matInput [value]="cliente.cliNome" name="cliNome" disabled>
+    </mat-form-field>
 
-        <mat-form-field appearance="outline">
-            <mat-label>Gmail*</mat-label>
-            <input matInput placeholder="" [value]="cliente.cliEmail" name="cliEmail" disabled>
-        </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>CPF*</mat-label>
+      <input matInput [value]="cliente.cliCpf" name="cliCpf" disabled>
+    </mat-form-field>
 
-        <mat-form-field appearance="outline">
-            <mat-label>Telefone*</mat-label>
-            <input matInput placeholder="" [value]="cliente.cliTelefone" name="cliTelefone" disabled>
-        </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Email*</mat-label>
+      <input matInput [value]="cliente.conEmail" name="conEmail" disabled>
+    </mat-form-field>
 
-        <mat-form-field appearance="outline">
-            <mat-label>Endereço*</mat-label>
-            <input matInput placeholder="" [value]="cliente.cliEndereco" name="cliEndereco" disabled>
-        </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Telefone Comercial*</mat-label>
+      <input matInput [value]="cliente.conTelefoneComercial" name="conTelefoneComercial" disabled>
+    </mat-form-field>
 
-    </form>
+    <mat-form-field appearance="outline">
+      <mat-label>Endereço*</mat-label>
+      <input matInput
+        [value]="cliente.endRua + ', ' + cliente.endNumero + ', ' + cliente.endCidade + ' - ' + cliente.endEstado + ' (' + cliente.endCep + ')'"
+        name="endereco" disabled>
+    </mat-form-field>
 
-    <button mat-raised-button (click)="deleteCliente()" color="warn">
-        Excluir
-    </button>
-   
-    <button mat-raised-button (click)="cancel()">
-        Cancelar
-    </button>
+  </form>
 
-</mat-card> 
+  <button mat-raised-button (click)="deleteCliente()" color="warn">Excluir</button>
+  <button mat-raised-button (click)="cancel()">Cancelar</button>
+</mat-card>
