--- a/src/app/component/cliente/cliente-read/cliente-read.component.html
+++ b/src/app/component/cliente/cliente-read/cliente-read.component.html
@@ -10,25 +10,30 @@
     <td mat-cell *matCellDef="let row">{{row.cliNome}}</td>
 </ng-container>
 
-<ng-container matColumnDef="cliEmail">
-    <th mat-header-cell *matHeaderCellDef>Email</th>
-    <td mat-cell *matCellDef="let row">{{row.cliEmail}}</td>
-</ng-container>
 
 <ng-container matColumnDef="cliCpf">
     <th mat-header-cell *matHeaderCellDef>Cpf</th>
     <td mat-cell *matCellDef="let row">{{row.cliCpf}}</td>
 </ng-container>
 
-
-<ng-container matColumnDef="cliTelefone">
-    <th mat-header-cell *matHeaderCellDef>Telefone</th>
-    <td mat-cell *matCellDef="let row">{{row.cliTelefone}}</td>
+<!-- Email -->
+<ng-container matColumnDef="conEmail">
+  <th mat-header-cell *matHeaderCellDef>Email</th>
+  <td mat-cell *matCellDef="let row">{{ row.conEmail }}</td>
 </ng-container>
 
-<ng-container matColumnDef="cliEndereco">
-    <th mat-header-cell *matHeaderCellDef>Endereço</th>
-    <td mat-cell *matCellDef="let row">{{row.cliEndereco}}</td>
+<!-- Telefone Comercial -->
+<ng-container matColumnDef="conTelefoneComercial">
+  <th mat-header-cell *matHeaderCellDef>Telefone</th>
+  <td mat-cell *matCellDef="let row">{{ row.conTelefoneComercial }}</td>
+</ng-container>
+
+<!-- Endereço formatado -->
+<ng-container matColumnDef="enderecoCompleto">
+  <th mat-header-cell *matHeaderCellDef>Endereço</th>
+  <td mat-cell *matCellDef="let row">
+    {{ row.endRua }}, {{ row.endNumero }} - {{ row.endCidade }} / {{ row.endEstado }} ({{ row.endCep }})
+  </td>
 </ng-container>
 
 <ng-container matColumnDef="action">
