--- a/src/app/component/cliente/cliente-create/cliente-create.component.html
+++ b/src/app/component/cliente/cliente-create/cliente-create.component.html
@@ -1,23 +1,39 @@
 <mat-card>
   <mat-card-title>Novo Cliente</mat-card-title>
 
-  <form>
-
+  <form #clienteForm="ngForm" (ngSubmit)="createCliente()">
     <!-- Nome e CPF -->
     <mat-form-field appearance="outline">
       <mat-label>Nome</mat-label>
-      <input matInput [(ngModel)]="cliente.cliNome" name="cliNome" required>
+      <input matInput [(ngModel)]="cliente.cliNome" name="cliNome" required #cliNome="ngModel">
+      <mat-error *ngIf="cliNome.invalid && cliNome.touched">
+        Nome é obrigatório.
+      </mat-error>
     </mat-form-field>
 
     <mat-form-field appearance="outline">
       <mat-label>CPF</mat-label>
-      <input matInput [(ngModel)]="cliente.cliCpf" name="cliCpf" maxlength="14" required>
+      <input matInput
+             name="cliCpf"
+             [(ngModel)]="cliente.cliCpf"
+             required
+             mask="000.000.000-00"
+             [dropSpecialCharacters]="false"
+             minlength="14"
+             maxlength="14"
+             #cliCpf="ngModel">
+      <mat-error *ngIf="cliCpf.invalid && cliCpf.touched">
+        CPF inválido ou incompleto
+      </mat-error>
     </mat-form-field>
 
     <!-- Contato -->
     <mat-form-field appearance="outline">
       <mat-label>Celular</mat-label>
-      <input matInput [(ngModel)]="cliente.conCelular" name="conCelular" required>
+      <input matInput [(ngModel)]="cliente.conCelular" name="conCelular" required #conCelular="ngModel">
+      <mat-error *ngIf="conCelular.invalid && conCelular.touched">
+        Celular é obrigatório.
+      </mat-error>
     </mat-form-field>
 
     <mat-form-field appearance="outline">
@@ -25,39 +41,62 @@
       <input matInput [(ngModel)]="cliente.conTelefoneComercial" name="conTelefoneComercial">
     </mat-form-field>
 
+ 
     <mat-form-field appearance="outline">
       <mat-label>Email</mat-label>
-      <input matInput [(ngModel)]="cliente.conEmail" name="conEmail" type="email" required>
+      <input matInput [(ngModel)]="cliente.conEmail" name="conEmail" type="email" required #conEmail="ngModel">
+      <mat-error *ngIf="conEmail.invalid && conEmail.touched">
+        Email inválido ou obrigatório.
+      </mat-error>
     </mat-form-field>
 
     <!-- Endereço -->
     <mat-form-field appearance="outline">
       <mat-label>Rua</mat-label>
-      <input matInput [(ngModel)]="cliente.endRua" name="endRua" required>
+      <input matInput [(ngModel)]="cliente.endRua" name="endRua" required #endRua="ngModel">
+      <mat-error *ngIf="endRua.invalid && endRua.touched">
+        Rua é obrigatória.
+      </mat-error>
     </mat-form-field>
 
     <mat-form-field appearance="outline">
       <mat-label>Número</mat-label>
-      <input matInput [(ngModel)]="cliente.endNumero" name="endNumero" required>
+      <input matInput [(ngModel)]="cliente.endNumero" name="endNumero" required #endNumero="ngModel">
+      <mat-error *ngIf="endNumero.invalid && endNumero.touched">
+        Número é obrigatório.
+      </mat-error>
     </mat-form-field>
 
     <mat-form-field appearance="outline">
       <mat-label>Cidade</mat-label>
-      <input matInput [(ngModel)]="cliente.endCidade" name="endCidade" required>
+      <input matInput [(ngModel)]="cliente.endCidade" name="endCidade" required #endCidade="ngModel">
+      <mat-error *ngIf="endCidade.invalid && endCidade.touched">
+        Cidade é obrigatória.
+      </mat-error>
     </mat-form-field>
 
     <mat-form-field appearance="outline">
       <mat-label>CEP</mat-label>
-      <input matInput [(ngModel)]="cliente.endCep" name="endCep" required>
+      <input matInput [(ngModel)]="cliente.endCep" name="endCep" required #endCep="ngModel">
+      <mat-error *ngIf="endCep.invalid && endCep.touched">
+        CEP é obrigatório.
+      </mat-error>
     </mat-form-field>
 
     <mat-form-field appearance="outline">
       <mat-label>Estado</mat-label>
-      <input matInput [(ngModel)]="cliente.endEstado" name="endEstado" required>
+      <input matInput [(ngModel)]="cliente.endEstado" name="endEstado" required #endEstado="ngModel">
+      <mat-error *ngIf="endEstado.invalid && endEstado.touched">
+        Estado é obrigatório.
+      </mat-error>
     </mat-form-field>
-  </form>
 
-  <!-- Botões -->
-  <button mat-raised-button (click)="createCliente()" color="primary">Salvar</button>
-  <button mat-raised-button (click)="cancel()">Cancelar</button>
+    <!-- Botões -->
+   <button mat-raised-button color="primary" type="submit">
+  Salvar
+</button>
+    <button mat-raised-button type="button" (click)="cancel()">
+      Cancelar
+    </button>
+  </form>
 </mat-card>
