--- a/src/app/component/cliente/cliente-read/cliente-read.component.html
+++ b/src/app/component/cliente/cliente-read/cliente-read.component.html
@@ -28,6 +28,12 @@
   <td mat-cell *matCellDef="let row">{{ row.conTelefoneComercial }}</td>
 </ng-container>
 
+<!-- Celular -->
+<ng-container matColumnDef="conCelular">
+  <th mat-header-cell *matHeaderCellDef>Celular</th>
+  <td mat-cell *matCellDef="let row">{{ row.conCelular }}</td>
+</ng-container>
+
 <!-- Endereço formatado -->
 <ng-container matColumnDef="enderecoCompleto">
   <th mat-header-cell *matHeaderCellDef>Endereço</th>
