--- a/src/app/component/paymentMethod/payment-method-update/payment-method-update.component.html
+++ b/src/app/component/paymentMethod/payment-method-update/payment-method-update.component.html
@@ -1,43 +1,47 @@
 <mat-card>
-    <mat-card-title>Alterar Forma de Pagamento</mat-card-title>
-    <form>
-        <mat-form-field appearance="outline">
-            <mat-label>Tipo*</mat-label>
-            <input matInput placeholder="" [(ngModel)]="paymentMethod.fpgTipo" name="fpgTipo">
-        </mat-form-field>
+  <mat-card-title>Alterar Forma de Pagamento</mat-card-title>
 
-        <mat-form-field appearance="outline">
-            <mat-label>Descriçao*</mat-label>
-            <input matInput placeholder="" [(ngModel)]="paymentMethod.fpgDescricao" name="fpgDescricao">
-        </mat-form-field>
+  <form #form="ngForm" (ngSubmit)="updatePaymentMethod()">
+    <!-- Tipo -->
+    <mat-form-field appearance="outline">
+      <mat-label>Tipo</mat-label>
+      <input matInput [(ngModel)]="paymentMethod.fpgTipo" name="fpgTipo" required #fpgTipo="ngModel">
+      <mat-error *ngIf="fpgTipo.invalid && fpgTipo.touched">Tipo é obrigatório</mat-error>
+    </mat-form-field>
 
-        <mat-form-field appearance="outline">
-            <mat-label>Permitir Parcelamento?</mat-label>
-            <mat-select  placeholder="Permitir Parcelamento? " [(ngModel)]="paymentMethod.fpgPermiteParcelamento" name="fpgPermiteParcelamento" required>
-              <mat-option [value]="true">Sim</mat-option>
-              <mat-option [value]="false">Não</mat-option>
-            </mat-select>
-          </mat-form-field>
+    <!-- Descrição -->
+    <mat-form-field appearance="outline">
+      <mat-label>Descrição</mat-label>
+      <input matInput [(ngModel)]="paymentMethod.fpgDescricao" name="fpgDescricao" required #fpgDescricao="ngModel">
+      <mat-error *ngIf="fpgDescricao.invalid && fpgDescricao.touched">Descrição é obrigatória</mat-error>
+    </mat-form-field>
 
-          
-             <mat-form-field appearance="outline">
-            <mat-label>Máximo de Parcelas</mat-label>
-            <input matInput type = "number" placeholder="" [(ngModel)]="paymentMethod.fpgNumMaxParcelas" name="fpgNumMaxParcelas" >
-        </mat-form-field>
+    <!-- Parcelamento -->
+    <mat-form-field appearance="outline">
+      <mat-label>Permitir Parcelamento?</mat-label>
+      <mat-select [(ngModel)]="paymentMethod.fpgPermiteParcelamento" name="fpgPermiteParcelamento" required #fpgPermiteParcelamento="ngModel">
+        <mat-option [value]="true">Sim</mat-option>
+        <mat-option [value]="false">Não</mat-option>
+      </mat-select>
+      <mat-error *ngIf="fpgPermiteParcelamento.invalid && fpgPermiteParcelamento.touched">Selecione uma opção</mat-error>
+    </mat-form-field>
 
-        <mat-form-field appearance="outline">
-            <mat-label>TaxaAdicional*</mat-label>
-            <input matInput placeholder="%" [(ngModel)]="paymentMethod.fpgTaxaAdicional" name="fpgTaxaAdicional">
-        </mat-form-field>
+    <!-- Máximo de Parcelas -->
+    <mat-form-field appearance="outline">
+      <mat-label>Máximo de Parcelas</mat-label>
+      <input matInput type="number" [(ngModel)]="paymentMethod.fpgNumMaxParcelas" name="fpgNumMaxParcelas" required #fpgNumMaxParcelas="ngModel">
+      <mat-error *ngIf="fpgNumMaxParcelas.invalid && fpgNumMaxParcelas.touched">Obrigatório</mat-error>
+    </mat-form-field>
 
-    </form>
+    <!-- Taxa Adicional -->
+    <mat-form-field appearance="outline">
+      <mat-label>Taxa Adicional (%)</mat-label>
+      <input matInput [(ngModel)]="paymentMethod.fpgTaxaAdicional" name="fpgTaxaAdicional" required #fpgTaxaAdicional="ngModel">
+      <mat-error *ngIf="fpgTaxaAdicional.invalid && fpgTaxaAdicional.touched">Obrigatório</mat-error>
+    </mat-form-field>
 
-    <button mat-raised-button (click)="updatePaymentMethod()" color="primary">
-        Atualizar
-    </button>
-   
-    <button mat-raised-button (click)="cancel()">
-        Cancelar
-    </button>
-
+    <!-- Botões -->
+    <button mat-raised-button color="primary" type="submit">Atualizar</button>
+    <button mat-raised-button type="button" (click)="cancel()">Cancelar</button>
+  </form>
 </mat-card>
