--- a/src/app/component/product/product-update/product-update.component.html
+++ b/src/app/component/product/product-update/product-update.component.html
@@ -1,61 +1,134 @@
 <mat-card>
-    <mat-card-title>Alterar Produto</mat-card-title>
-    <form>
-        <mat-form-field appearance="outline">
-            <mat-label>Nome do Produto*</mat-label>
-            <input matInput placeholder="" [(ngModel)]="product.proNome" name="proNome">
-        </mat-form-field>
+  <mat-card-title>Alterar Produto</mat-card-title>
 
-        <mat-form-field appearance="outline">
-            <mat-label>Preço do Custo(R$)*</mat-label>
-            <input matInput placeholder="" [(ngModel)]="product.proPrecoCusto" name="proPrecoCusto" type="number">
-        </mat-form-field>
+  <form #produtoForm="ngForm" (ngSubmit)="updateProduct()">
 
-        <mat-form-field appearance="outline">
-            <mat-label>Preço de Venda(R$)*</mat-label>
-            <input matInput placeholder="" [(ngModel)]="product.proPrecoVenda" name="proPrecoVenda" type="number">
-        </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Nome do Produto*</mat-label>
+      <input matInput
+             [(ngModel)]="product.proNome"
+             name="proNome"
+             required
+             #proNome="ngModel">
+      <mat-error *ngIf="proNome.invalid && proNome.touched">
+        Nome do Produto é obrigatório.
+      </mat-error>
+    </mat-form-field>
 
-        <mat-form-field appearance="outline">
-            <mat-label>Quantidade*</mat-label>
-            <input matInput placeholder="" [(ngModel)]="product.proQuantidade" name="proQuantidade" type="number">
-        </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Preço do Custo (R$)*</mat-label>
+      <input matInput
+             type="number"
+             [(ngModel)]="product.proPrecoCusto"
+             name="proPrecoCusto"
+             required
+             #proPrecoCusto="ngModel"
+             min="0">
+      <mat-error *ngIf="proPrecoCusto.invalid && proPrecoCusto.touched">
+        Preço do Custo é obrigatório e não pode ser negativo.
+      </mat-error>
+    </mat-form-field>
 
-        <mat-form-field appearance="outline">
-            <mat-label>Descrição*</mat-label>
-            <input matInput placeholder="" [(ngModel)]="product.proDescricao" name="proDescricao">
-        </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Preço de Venda (R$)*</mat-label>
+      <input matInput
+             type="number"
+             [(ngModel)]="product.proPrecoVenda"
+             name="proPrecoVenda"
+             required
+             #proPrecoVenda="ngModel"
+             min="0">
+      <mat-error *ngIf="proPrecoVenda.invalid && proPrecoVenda.touched">
+        Preço de Venda é obrigatório e não pode ser negativo.
+      </mat-error>
+    </mat-form-field>
 
-        <mat-form-field appearance="outline">
-            <mat-label>Código de Barras*</mat-label>
-            <input matInput placeholder="" [(ngModel)]="product.proCodigoBarras" name="proCodigoBarras" type="number">
-        </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Quantidade*</mat-label>
+      <input matInput
+             type="number"
+             [(ngModel)]="product.proQuantidade"
+             name="proQuantidade"
+             required
+             #proQuantidade="ngModel"
+             min="0">
+      <mat-error *ngIf="proQuantidade.invalid && proQuantidade.touched">
+        Quantidade é obrigatória e não pode ser negativa.
+      </mat-error>
+    </mat-form-field>
 
-        <mat-form-field appearance="outline">
-            <mat-label>Marca*</mat-label>
-            <input matInput placeholder="" [(ngModel)]="product.proMarca" name="proMarca">
-        </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Descrição*</mat-label>
+      <input matInput
+             [(ngModel)]="product.proDescricao"
+             name="proDescricao"
+             required
+             #proDescricao="ngModel">
+      <mat-error *ngIf="proDescricao.invalid && proDescricao.touched">
+        Descrição é obrigatória.
+      </mat-error>
+    </mat-form-field>
 
-        <mat-form-field appearance="outline">
-            <mat-label>Categoria*</mat-label>
-            <input matInput placeholder="" [(ngModel)]="product.proCategoria" name="proCategoria">
-        </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Código de Barras*</mat-label>
+      <input matInput
+             type="text"
+             maxlength="13"
+             [(ngModel)]="product.proCodigoBarras"
+             name="proCodigoBarras"
+             required
+             #proCodigoBarras="ngModel">
+      <mat-error *ngIf="proCodigoBarras.invalid && proCodigoBarras.touched">
+        Código de Barras é obrigatório e deve ter no máximo 13 caracteres.
+      </mat-error>
+    </mat-form-field>
 
-        <mat-form-field appearance="outline">
-            <mat-select placeholder="Ex: True or False" [(ngModel)]="product.proAtivo" name="proAtivo">
-              <mat-option [value]="true">True</mat-option>
-              <mat-option [value]="false">False</mat-option>
-            </mat-select>
-          </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Marca*</mat-label>
+      <input matInput
+             [(ngModel)]="product.proMarca"
+             name="proMarca"
+             required
+             #proMarca="ngModel">
+      <mat-error *ngIf="proMarca.invalid && proMarca.touched">
+        Marca é obrigatória.
+      </mat-error>
+    </mat-form-field>
 
-    </form>
+    <mat-form-field appearance="outline">
+      <mat-label>Categoria*</mat-label>
+      <input matInput
+             [(ngModel)]="product.proCategoria"
+             name="proCategoria"
+             required
+             #proCategoria="ngModel">
+      <mat-error *ngIf="proCategoria.invalid && proCategoria.touched">
+        Categoria é obrigatória.
+      </mat-error>
+    </mat-form-field>
 
-    <button mat-raised-button (click)="updateProduct()" color="primary">
-        Atualizar
+    <mat-form-field appearance="outline">
+      <mat-label>Status do Produto</mat-label>
+      <mat-select
+        [(ngModel)]="product.proAtivo"
+        name="proAtivo"
+        required
+        #proAtivo="ngModel">
+        <mat-option [value]="true">Ativo</mat-option>
+        <mat-option [value]="false">Inativo</mat-option>
+      </mat-select>
+      <mat-error *ngIf="proAtivo.invalid && proAtivo.touched">
+        Status é obrigatório.
+      </mat-error>
+    </mat-form-field>
+
+    <button mat-raised-button color="primary" type="submit" >
+      Atualizar
     </button>
-   
-    <button mat-raised-button (click)="cancel()">
-        Cancelar
+
+    <button mat-raised-button type="button" (click)="cancel()">
+      Cancelar
     </button>
 
+  </form>
 </mat-card>
