--- a/src/app/component/supplier/supplier-create/supplier-create.component.html
+++ b/src/app/component/supplier/supplier-create/supplier-create.component.html
@@ -1,28 +1,53 @@
 <mat-card>
-    <mat-card-title>Novo Fornecedor</mat-card-title>
-    <form>
-      
-        <mat-form-field appearance="outline">
-            <mat-label>Razão Social</mat-label>
-            <input matInput placeholder="" [(ngModel)]="supplier.forRazaoSocial" name="razaoSocial" required>
-        </mat-form-field>
+  <mat-card-title>Novo Fornecedor</mat-card-title>
 
-        <mat-form-field appearance="outline">
-            <mat-label>Nome da Fantasia</mat-label>
-            <input matInput placeholder="" [(ngModel)]="supplier.forNomeFantasia" name="nomeFantasia" required>
-        </mat-form-field>
-        
-        <mat-form-field appearance="outline">
-            <mat-label>Cnpj*</mat-label>
-            <input matInput placeholder="" [(ngModel)]="supplier.forCnpj" name="cnpj"  required minlength="14" maxlength="14">
-        </mat-form-field>
-    </form>
+  <form #fornecedorForm="ngForm" (ngSubmit)="createSupplier()">
+    <!-- Razão Social -->
+    <mat-form-field appearance="outline">
+      <mat-label>Razão Social</mat-label>
+      <input matInput
+             [(ngModel)]="supplier.forRazaoSocial"
+             name="forRazaoSocial"
+             required
+             #forRazaoSocial="ngModel">
+      <mat-error *ngIf="forRazaoSocial.invalid && forRazaoSocial.touched">
+        Razão Social é obrigatória.
+      </mat-error>
+    </mat-form-field>
 
-    <button mat-raised-button (click)="createSupplier()" color="primary">
-        Salvar
+    <!-- Nome da Fantasia -->
+    <mat-form-field appearance="outline">
+      <mat-label>Nome da Fantasia</mat-label>
+      <input matInput
+             [(ngModel)]="supplier.forNomeFantasia"
+             name="forNomeFantasia"
+             required
+             #forNomeFantasia="ngModel">
+      <mat-error *ngIf="forNomeFantasia.invalid && forNomeFantasia.touched">
+        Nome da Fantasia é obrigatório.
+      </mat-error>
+    </mat-form-field>
+
+    <!-- CNPJ -->
+<mat-form-field appearance="outline">
+  <mat-label>CNPJ</mat-label>
+  <input matInput
+         [(ngModel)]="supplier.forCnpj"
+         name="forCnpj"
+         required
+         maxlength="14"
+         #forCnpj="ngModel">
+  <mat-error *ngIf="forCnpj.invalid && forCnpj.touched">
+    CNPJ é obrigatório e deve ter no máximo 14 caracteres.
+  </mat-error>
+</mat-form-field>
+
+    <!-- Botões -->
+    <button mat-raised-button color="primary" type="submit">
+      Salvar
     </button>
-   
-    <button mat-raised-button (click)="cancel()">
-        Cancelar
-    </button>
+    <button mat-raised-button type="button" (click)="cancel()">
+      Cancelar
+    </button>   
+  </form>
 </mat-card>
