--- a/src/app/component/product/product-create/product-create.component.html
+++ b/src/app/component/product/product-create/product-create.component.html
@@ -68,6 +68,19 @@
       <mat-error *ngIf="proAtivo.invalid && proAtivo.touched">Obrigatório.</mat-error>
     </mat-form-field>
 
+
+
+<!--Selecionar o Fornecedor-->
+<mat-form-field appearance="outline">
+  <mat-label>Fornecedor</mat-label>
+  <mat-select [(ngModel)]="product.fornecedor" name="fornecedor" required #fornecedorNgModel="ngModel">
+    <mat-option *ngFor="let fornecedor of fornecedores" [value]="fornecedor">
+      {{ fornecedor.forRazaoSocial }}
+    </mat-option>
+  </mat-select>
+  <mat-error *ngIf="fornecedorNgModel.invalid && fornecedorNgModel.touched">Fornecedor é obrigatório.</mat-error>
+</mat-form-field>
+
     <!-- Botões -->
     <button mat-raised-button color="primary" type="submit">Salvar</button>
     <button mat-raised-button type="button" (click)="cancel()">Cancelar</button>
