--- a/src/app/component/supplier/supplier-read/supplier-read.component.html
+++ b/src/app/component/supplier/supplier-read/supplier-read.component.html
@@ -26,6 +26,35 @@
       <td mat-cell *matCellDef="let row">{{row.forCnpj}}</td>
     </ng-container>
 
+
+  <!-- Email -->
+<ng-container matColumnDef="conEmail">
+  <th mat-header-cell *matHeaderCellDef>Email</th>
+  <td mat-cell *matCellDef="let row">{{ row.conEmail }}</td>
+</ng-container>
+
+<!-- Telefone Comercial -->
+<ng-container matColumnDef="conTelefoneComercial">
+  <th mat-header-cell *matHeaderCellDef>Telefone</th>
+  <td mat-cell *matCellDef="let row">{{ row.conTelefoneComercial }}</td>
+</ng-container>
+
+<!-- Celular -->
+<ng-container matColumnDef="conCelular">
+  <th mat-header-cell *matHeaderCellDef>Celular</th>
+  <td mat-cell *matCellDef="let row">{{ row.conCelular }}</td>
+</ng-container>
+
+<!-- Endereço formatado -->
+<ng-container matColumnDef="enderecoCompleto">
+  <th mat-header-cell *matHeaderCellDef>Endereço</th>
+  <td mat-cell *matCellDef="let row">
+    {{ row.endRua }}, {{ row.endNumero }} - {{ row.endCidade }} / {{ row.endEstado }} ({{ row.endCep }})
+  </td>
+</ng-container>
+ 
+
+
     <!-- Action Column -->
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef>Ações</th>                    
