--- a/src/app/component/template/nav/nav.component.html
+++ b/src/app/component/template/nav/nav.component.html
@@ -29,6 +29,14 @@
                 <i class="material-icons">local_atm</i> <!-- Ícone de pagamento -->
                 <span>Pagamento</span>
             </a>
+
+             
+              <!-- Link para a página de métodos de pagamento -->
+            <a mat-list-item routerLink="/marcas">
+                <i class="material-icons">local_offer</i> <!-- Ícone de pagamento -->
+                <span>Marca</span>
+            </a>
+
         </mat-nav-list>
     </mat-sidenav>
 
