--- a/src/app/component/product/product-read/product-read.component.html
+++ b/src/app/component/product/product-read/product-read.component.html
@@ -36,10 +36,10 @@
       <td mat-cell *matCellDef="let row">{{row.proQuantidade}}</td>
     </ng-container>
 
-    <ng-container matColumnDef="proMarca">
-      <th mat-header-cell *matHeaderCellDef>Marca</th>
-      <td mat-cell *matCellDef="let row">{{row.proMarca}}</td>
-    </ng-container>
+<ng-container matColumnDef="marca">
+  <th mat-header-cell *matHeaderCellDef>Marca</th>
+  <td mat-cell *matCellDef="let row">{{ row.marca?.marNome }}</td>
+</ng-container>
 
     <ng-container matColumnDef="proAtivo">
       <th mat-header-cell *matHeaderCellDef>Ativo</th>
