--- a/src/app/component/marca/marca-update/marca-update.component.html
+++ b/src/app/component/marca/marca-update/marca-update.component.html
@@ -1,7 +1,7 @@
 <mat-card>
   <mat-card-title>Alterar Marca</mat-card-title>
 
-  <form #produtoForm="ngForm" (ngSubmit)="updateMarca()">
+  <form #marcaForm="ngForm" (ngSubmit)="updateMarca()">
 
     <mat-form-field appearance="outline">
       <mat-label>Nome da Marca*</mat-label>
