--- a/src/app/views/categoria-crud/categoria-crud.component.html
+++ b/src/app/views/categoria-crud/categoria-crud.component.html
@@ -1,1 +1,6 @@
-<p>categoria-crud works!</p>
+<button mat-raised-button (click) = "navigateToCategoriaCreate()" color = "primary">
+    Nova Categoria de Produto
+</button>
+
+
+<app-categoria-read></app-categoria-read>
