--- a/src/app/component/categoria/categoria-read/categoria-read.component.html
+++ b/src/app/component/categoria/categoria-read/categoria-read.component.html
@@ -1,1 +1,45 @@
-<p>categoria-read works!</p>
+<div class="mat-elevation-z4">
+
+  <table mat-table [dataSource]="categorias">
+    
+ 
+    <ng-container matColumnDef="ctgId">
+      <th mat-header-cell *matHeaderCellDef>Id</th>
+      <td mat-cell *matCellDef="let row">{{row.ctgId}}</td>
+    </ng-container>
+
+    
+    <ng-container matColumnDef="ctgNome">
+      <th mat-header-cell *matHeaderCellDef>Nome</th>
+      <td mat-cell *matCellDef="let row">{{row.ctgNome}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="ctgDescricao">
+      <th mat-header-cell *matHeaderCellDef>Descrição</th>
+      <td mat-cell *matCellDef="let row">{{row.ctgDescricao}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="ctgAtivo">
+      <th mat-header-cell *matHeaderCellDef>Ativo</th>
+   <td mat-cell *matCellDef="let row">{{ row.ctgAtivo ? 'Sim' : 'Inativo' }}</td>
+    </ng-container>
+
+
+
+    <!-- Action Column -->
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef>Ações</th>                    
+      <td mat-cell *matCellDef="let row">
+          <a routerLink="/categorias/update/{{ row.ctgId }}" class="edit">
+              <i class="material-icons">edit</i>
+          </a>
+          <a routerLink="/categorias/delete/{{ row.ctgId }}" class="delete">
+              <i class="material-icons">delete</i>
+          </a>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+</div>
