--- a/src/app/component/product/product-read/product-read.component.html
+++ b/src/app/component/product/product-read/product-read.component.html
@@ -14,11 +14,6 @@
       <td mat-cell *matCellDef="let row">{{row.proNome}}</td>
     </ng-container>
 
-    <!-- Definição da coluna para o preço de custo do produto -->
-    <ng-container matColumnDef="proPrecoCusto">
-      <th mat-header-cell *matHeaderCellDef>Preço de Custo</th>
-      <td mat-cell *matCellDef="let row">{{row.proPrecoCusto | currency: 'BRL'}}</td>
-    </ng-container>
 
     <!-- Definição da coluna para o preço de venda do produto -->
     <ng-container matColumnDef="proPrecoVenda">
@@ -26,10 +21,11 @@
       <td mat-cell *matCellDef="let row">{{row.proPrecoVenda | currency: 'BRL'}}</td>
     </ng-container>
 
-    <ng-container matColumnDef="proCategoria">
-      <th mat-header-cell *matHeaderCellDef>Categoria</th>
-      <td mat-cell *matCellDef="let row">{{row.proCategoria}}</td>
-    </ng-container>
+
+<ng-container matColumnDef="categoria">
+  <th mat-header-cell *matHeaderCellDef>Categoria</th>
+  <td mat-cell *matCellDef="let row">{{ row.categoria?.ctgNome }}</td>
+</ng-container>
 
     <ng-container matColumnDef="proQuantidade">
       <th mat-header-cell *matHeaderCellDef>Quantidade</th>
@@ -41,16 +37,19 @@
   <td mat-cell *matCellDef="let row">{{ row.marca?.marNome }}</td>
 </ng-container>
 
+
+<ng-container matColumnDef="fornecedor">
+  <th mat-header-cell *matHeaderCellDef>Fornecedor</th>
+  <td mat-cell *matCellDef="let row">{{ row.fornecedor?.forNomeFantasia }}</td>
+</ng-container>
+
     <ng-container matColumnDef="proAtivo">
       <th mat-header-cell *matHeaderCellDef>Ativo</th>
    <td mat-cell *matCellDef="let row">{{ row.proAtivo ? 'Sim' : 'Não' }}</td>
     </ng-container>
 
 
-<ng-container matColumnDef="fornecedor">
-  <th mat-header-cell *matHeaderCellDef>Fornecedor</th>
-  <td mat-cell *matCellDef="let row">{{ row.fornecedor?.forRazaoSocial }}</td>
-</ng-container>
+
 
     <!-- Definição da coluna para ações (editar e deletar) -->
     <ng-container matColumnDef="action">
