--- a/src/app/component/template/nav/nav.component.html
+++ b/src/app/component/template/nav/nav.component.html
@@ -20,7 +20,7 @@
 
             <!-- Link para a página de fornecedores -->
             <a mat-list-item routerLink="/suppliers">
-                <i class="material-icons">group</i> <!-- Ícone de fornecedores -->
+                <i class="material-icons">local_shipping</i> <!-- Ícone de fornecedores -->
                 <span>Fornecedores</span>
             </a>
 
@@ -31,10 +31,16 @@
             </a>
 
              
-              <!-- Link para a página de métodos de pagamento -->
+              <!-- Link para a página de Marcas -->
             <a mat-list-item routerLink="/marcas">
-                <i class="material-icons">local_offer</i> <!-- Ícone de pagamento -->
+                <i class="material-icons">local_offer</i> <!-- Ícone de marca -->
                 <span>Marca</span>
+            </a>
+
+    <!-- Link para a página de Categorias -->
+            <a mat-list-item routerLink="/categorias">
+                <i class="material-icons">category</i> <!-- Ícone de categoria -->
+                <span>Categoria</span>
             </a>
 
         </mat-nav-list>
