--- a/src/app/views/payment-method-crud/payment-method-crud.component.html
+++ b/src/app/views/payment-method-crud/payment-method-crud.component.html
@@ -1,5 +1,5 @@
 <button mat-raised-button (click) = "navigateToPaymentMethodCreate()" color = "primary">
-    Nova Forma de pagamento
+    Novo Pagamento
 </button>
 
 
